envoy/config/envoy.yaml
listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
      - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: backend
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/service/1"
                        route:
                          cluster: service1
                      - match:
                          prefix: "/service/2"
                        route:
                          cluster: service2
              http_filters:
                - name: envoy.router
                  config: {}
