envoy/config/envoy2.yaml
#dmin:
# access_log_path: /tmp/admin_access.log
# address:
#   socket_address:
#     protocol: TCP
#     address: 127.0.0.1
#     port_value: 9901
#tatic_resources:
# listeners:
# - name: listener_0
#   address:
#     socket_address:
#       protocol: TCP
#       address: 0.0.0.0
#       port_value: 10000
#   filter_chains:
#   - filters:
#     - name: envoy.filters.network.http_connection_manager
#       config:
#       typed_config:
#         "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
#         stat_prefix: ingress_http
#         route_config:
#           name: local_route
#           virtual_hosts:
#           - name: local_service
#             domains: ["*"]
#             routes:
#             - match:
#                 prefix: "/"
#               route:
#                 host_rewrite: www.yahoo.co.jp
#                 cluster: service_yahoo
#         http_filters:
#         - name: envoy.filters.http.router
# clusters:
# - name: service_yahoo
#   connect_timeout: 0.25s
#   type: LOGICAL_DNS
#   # Comment out the following line to test on v6 networks
#   dns_lookup_family: V4_ONLY
#   lb_policy: ROUND_ROBIN
#   load_assignment:
#     cluster_name: service_yahoo
#     endpoints:
#     - lb_endpoints:
#       - endpoint:
#           address:
#             socket_address:
#               address: www.yahoo.co.jp
#               port_value: 443
#   transport_socket:
#     name: envoy.transport_sockets.tls
#     typed_config:
#       "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
#       sni: www.yahoo.co.jp

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite: envoy
                  cluster: service_front
          access_log:
            - name: envoy.file_access_log
              config:
                path: /dev/stdout
          http_filters:
          - name: envoy.router
  - name: listener_1
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 9000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite: envoy
                  cluster: service_app1
          access_log:
            - name: envoy.file_access_log
              config:
                path: /dev/stdout
          http_filters:
          - name: envoy.router
  clusters:
  - name: service_front
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
      - socket_address:
          address: front
          port_value: 8080
  - name: service_app1
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
      - socket_address:
          address: app1
          port_value: 8081
